Revision history for {{$dist->name}}

{{$NEXT}}

1.11      2018-06-07 14:28:04 -0400
  - Move to Perl5-Alien org

1.10      2018-04-17 10:22:10-04:00 America/New_York
  - Production release identical to 1.09_01

1.09_01   2018-04-16 06:36:24-04:00 America/New_York (TRIAL RELEASE)
  - Download .bz2 tarball instead of .gz
    Starting with the 6.x.x series, gmp doesn't provide .tar.gz
    anymore

1.08      2018-03-08 02:23:26-05:00 America/New_York
  - Switch from ftp to http

1.07      2017-12-07 10:21:02-05:00 America/New_York
  - Production release identical to 1.06_02

1.06_02   2017-12-06 13:34:39-05:00 America/New_York (TRIAL RELEASE)
  - Fix bug introduced in 1.06_01 where install could fail on system
    build if C++ bindings are not available.

1.06_01   2017-12-06 11:41:31-05:00 America/New_York (TRIAL RELEASE)
  - Add support for C++ bindings via Alien::GMP->alt('gmpxx')
    Provided only if available.

1.05      2017-09-21 15:32:35-04:00 America/New_York
  - Support for system install of gmp on Solaris

1.04      2017-08-14 10:00:04-04:00 America/New_York
  - Partial fix for ActiveState Perl

1.03_01   2017-08-08 14:52:08-04:00 America/New_York (TRIAL RELEASE)
  - Support FFI on system install

1.02      2017-08-08 14:30:36-04:00 America/New_York
  - Fix typo in skip causing failures

1.01      2017-07-31 15:22:50-04:00 America/New_York
  - Disable ffi test on system install

1.00      2017-07-28 13:57:18-04:00 America/New_York
  - Fix cflags and libs for share install
  - Add FFI test

v0.1.0    2017-07-25 06:50:05-04:00 America/New_York
  - Migrated build system to use alienfile + Alien::Build + Alien::Base

v0.0.6_01 2015-01-18 12:58:07-06:00 America/Chicago
  - Migrated build system to use Alien::Base.
    This allows the version of of GMP to always track the latest rather
    than using `gmp-5.0.4.tar.bz2` each time.
  - Using Alien::Base changes the functions `inc_dir()` and `lib_dir()`
    to methods `cflags()` and `libs()`.
