@@ -12,6 +12,7 @@ travis_status = 1
 release_tests = 1
 irc           = irc://irc.perl.org/#native
 github_user   = Perl5-Alien
+test2_v0      = 1
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   require Alien::GMP;
@@ -37,10 +38,10 @@ remove = warnings
 remove = base
 
 [Prereqs / ConfigureRequires]
-Alien::Build        = 0.67
+Alien::Build        = 1.46
 
 [Prereqs]
-Alien::Base         = 0.67
+Alien::Base         = 1.46
 
 [Author::Plicease::Upload]
 cpan = 1
