@@ -2,13 +2,10 @@ package Alien::GMP;
 
 use strict;
 use warnings;
-use parent 'Alien::Base';
-use Role::Tiny::With qw( with );
+use base 'Alien::Base';
 
 # VERSION
 # ABSTRACT: Alien package for the GNU Multiple Precision library.
-
-with 'Alien::Role::Alt';
 
 1;
 
