@@ -1,7 +1,7 @@
-use strict;
-use warnings;
+use Test2::V0 -no_srand => 1;
 use Config;
-use Test::More tests => 1;
+
+eval q{ require Test::More };
 
 # This .t file is generated.
 # make changes instead to dist.ini
@@ -13,14 +13,10 @@ $modules{$_} = $_ for qw(
   Alien::Base
   Alien::Build
   Alien::Build::MM
-  Alien::Role::Alt
   ExtUtils::CBuilder
   ExtUtils::MakeMaker
-  Role::Tiny::With
   Test2::V0
   Test::Alien
-  Test::More
-  parent
 );
 
 $post_diag = sub {
@@ -80,7 +76,7 @@ if(@keys > 0)
 
 diag sprintf $format, 'perl ', $];
 
-foreach my $module (@modules)
+foreach my $module (sort @modules)
 {
   if(eval qq{ require $module; 1 })
   {
@@ -102,3 +98,4 @@ if($post_diag)
 
 spacer;
 
+done_testing;
